[package]
name = "flang"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools = "0.8.0"
fnv = "1.0.6"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
dyn-fmt = "0.3.0"
ureq = "2.1.0"
num-bigint = {version="0.2.2", features = ["rand"]}
num-traits = {version="0.2.14"}
num-iter = "0.1.42"
pulldown-cmark = "0.8.0"
colored = "2"
rustyline = "5.0.3"
clap = {version = "4.4", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exitcode = "1.1.2"
rand = "0.6.0"

[lib]
path = "src/lib.rs"
