[package]
name = "flang"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools = "0.12"
rand = "0.8"

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[lib]
path = "src/lib.rs"
